# BaizeArm

./: README.md
1.3D model/机械臂STL文件/: ARM_UN.SLDASM  ball.SLDPRT  关节1.SLDPRT  大臂.SLDPRT  小臂.SLDPRT  底座_1.SLDPRT  驱动关节_1.SLDASM
2.Hardware files(EasyEDA)/: BaizeCarboard.rar  Baize_Foc_v0.1.rar
3.Sofrware/Arduino code/BLDC_close_loop_position_example/: BLDC_close_loop_position_example.ino
3.Sofrware/Arduino code/BLDC_open_loop_position_example/: BLDC_open_loop_position_example.ino
3.Sofrware/Arduino code/Step_position/: Step_position.ino
3.Sofrware/Arduino code/as5600_test/: as5600_test.ino
3.Sofrware/Arduino code/find_IIC_device/: find_IIC_device.ino
3.Sofrware/Arduino code/joint1/: joint1.ino
3.Sofrware/Arduino code/joint2/: joint2.ino
3.Sofrware/Arduino code/joint2o/: joint2o.ino
3.Sofrware/Arduino code/joint3/: joint3.ino
3.Sofrware/Arduino code/joint3o/: joint3o.ino
3.Sofrware/Arduino code/servo_control/: servo_control.ino
3.Sofrware/ROS package/ARM_UN/: CMakeLists.txt  package.xml
3.Sofrware/ROS package/ARM_UN/launch/: display.launch  gazebo.launch
3.Sofrware/ROS package/ARM_UN/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
3.Sofrware/ROS package/ARM_UN/src/: kinetic.cpp  topicInverse.cpp
3.Sofrware/ROS package/ARM_UN/urdf/: ARM_UN.csv  ARM_UN.gv  ARM_UN.urdf
3.Sofrware/ROS package/robot_msg/: CMakeLists.txt
3.Sofrware/ROS package/robot_msg/msg/: robotarm_7dof_jointstate.msg
